<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChineseActivity">

    <LinearLayout
        style="@style/linear1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/linear_language">

            <Button
                style="@style/back"
                android:id="@+id/back" />

            <ImageView
                android:id="@+id/chinese"
                style="@style/language_button"
                app:srcCompat="@drawable/chinese" />
        </LinearLayout>

        <TextView
            android:id="@+id/repetitors"
            style="@style/repetitors_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_james"
            style="@style/people_const">

            <ImageView
                style="@style/james_image"
                android:id="@+id/james_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/james"
                style="@style/people_text"
                android:text="@string/james"
                app:layout_constraintStart_toEndOf="@+id/james_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                style="@style/date_text"
                android:text="@string/date1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/james_avatar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/line2"
            style="@style/line2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_anna"
            style="@style/people_const">

            <ImageView
                android:id="@+id/anna"
                style="@style/anna_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/people_text"
                android:id="@+id/anna_name"
                android:text="@string/anna_name"
                app:layout_constraintStart_toEndOf="@+id/anna"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/date_text"
                android:id="@+id/date2"
                android:text="@string/date2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/anna" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            style="@style/line2"
            android:id="@+id/line3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_sam"
            style="@style/people_const">

            <ImageView
                style="@style/sam_avatar"
                android:id="@+id/sam"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/people_text"
                android:id="@+id/sam_name"
                android:text="@string/sam"
                app:layout_constraintStart_toEndOf="@+id/sam"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/date_text"
                android:id="@+id/date3"
                android:text="@string/date3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sam" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu"
            android:layout_marginTop="250dp"
            android:background="#00FFFFFF"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>