<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnglishRepActivity">

    <LinearLayout
        style="@style/linear1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/linear_language">

            <Button
                style="@style/back"
                android:id="@+id/back" />

            <ImageView
                style="@style/language_button"
                android:id="@+id/english"
                app:srcCompat="@drawable/english" />
        </LinearLayout>

        <TextView
            style="@style/repetitors_text"
            android:id="@+id/repetitors" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/people_const"
            android:id="@+id/constraint_james">

            <ImageView
                style="@style/james_image"
                android:id="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/people_text"
                android:id="@+id/james"
                android:text="@string/james"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/date_text"
                android:id="@+id/date"
                android:text="@string/date1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            style="@style/line2"
            android:id="@+id/imageView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/people_const"
            android:id="@+id/constraint_anna">

            <ImageView
                style="@style/anna_avatar"
                android:id="@+id/anna"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/people_text"
                android:id="@+id/anna_name"
                android:text="@string/anna_name"
                app:layout_constraintStart_toEndOf="@+id/anna"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/date_text"
                android:id="@+id/date2"
                android:text="@string/date2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/anna" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            style="@style/line2"
            android:id="@+id/imageView3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/people_const"
            android:id="@+id/constraint_sam">

            <ImageView
                style="@style/sam_avatar"
                android:id="@+id/sam"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/people_text"
                android:id="@+id/sam_name"
                android:text="@string/sam"
                app:layout_constraintStart_toEndOf="@+id/sam"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/date_text"
                android:id="@+id/date3"
                android:text="@string/date3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sam" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            style="@style/add_button_rep"
            android:id="@+id/add" />

        <LinearLayout
            style="@style/linear_layout"
            android:layout_marginTop="160dp">

            <ImageView
                style="@style/line2"
                android:layout_gravity="center"
                android:id="@+id/line" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu"
                android:background="#00FFFFFF"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>