<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterRepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle">

            <EditText
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle">

            <EditText
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle">

            <EditText
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:text="@string/password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle">

            <EditText
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:text="@string/password2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="231dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_voiti"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>