<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsLanguageRepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="461dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/yazyk"
            android:layout_width="352dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle1"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/yazyk"
                app:layout_constraintEnd_toEndOf="@id/yazyk"
                app:layout_constraintStart_toStartOf="@id/yazyk"
                app:layout_constraintTop_toTopOf="@id/yazyk">

                <TextView
                    android:id="@+id/russian"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/russian"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/kyrgyz"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/kyrgyz"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/english"
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>