<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageAnnaActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="71dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/back" />

            <ImageView
                android:id="@+id/anna_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="135dp"
                app:srcCompat="@drawable/anna" />
        </LinearLayout>

        <TextView
            android:id="@+id/anna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/anna_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/no_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_messages" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_message"
            android:layout_width="355dp"
            android:layout_height="57dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/rectangle">

            <Button
                android:id="@+id/send_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/vvedite_sms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu"
                android:background="#00FFFFFF"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>