<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/timur_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timur_avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/timur" />

            <TextView
                android:id="@+id/timur_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/timur"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:id="@+id/anna_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/anna_avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/anna" />

            <TextView
                android:id="@+id/anna_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/anna_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:id="@+id/alex_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alex_avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/alex" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/alex_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>