<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/leona_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:id="@+id/sam_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sam_avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/sam" />

            <TextView
                android:id="@+id/sam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/alina_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:id="@+id/alex_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alex_avatar"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/alex" />

            <TextView
                android:id="@+id/danil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/danil_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
